02_alb.yaml
AWSTemplateFormatVersion: '2010-09-09'

Parameters:
  Project:
    Type: String
    Default: "cfn-test-"

Resources:
  SecurityGroupALB:
    Type: AWS::EC2::SecurityGroup
    DeletionPolicy: Retain
    Properties:
      GroupName: !Sub "${Project}sg-alb"
      GroupDescription: "Security Group For ALB."
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          ToPort: 80
          FromPort: 80
          IpProtocol: tcp
        - CidrIp: 0.0.0.0/0
          ToPort: 8080
          FromPort: 8080
          IpProtocol: tcp
      VpcId: {'Fn::ImportValue' : !Sub "${Project}vpc"}
      Tags:
        - Key: Name
          Value: !Sub "${Project}security-group-alb"

  ALB:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    DeletionPolicy: Retain
    Properties: 
      IpAddressType: ipv4
      Name: !Sub "${Project}alb"
      Scheme: internet-facing
      SecurityGroups:
        - !Ref SecurityGroupALB
      Subnets:
        - {'Fn::ImportValue' : !Sub "${Project}subnet-dmz1"}
        - {'Fn::ImportValue' : !Sub "${Project}subnet-dmz2"}
      Type: application

  TargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties: 
      HealthCheckEnabled: true
      HealthCheckIntervalSeconds: 30
      HealthCheckPath: /robots.txt
      HealthCheckPort: 80
      HealthCheckProtocol: HTTP
      HealthCheckTimeoutSeconds: 10
      HealthyThresholdCount: 3
      Matcher: 
         HttpCode: 200
      Name: !Sub "${Project}target-group"
      Port: 80
      Protocol: HTTP
      TargetGroupAttributes:
        - Key: "stickiness.enabled"
          Value: true
      TargetType: ip
      UnhealthyThresholdCount: 3
      VpcId: {'Fn::ImportValue': !Sub "${Project}vpc"}

  TargetGroup2:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties: 
      HealthCheckEnabled: true
      HealthCheckIntervalSeconds: 30
      HealthCheckPath: /robots.txt
      HealthCheckPort: 80
      HealthCheckProtocol: HTTP
      HealthCheckTimeoutSeconds: 10
      HealthyThresholdCount: 3
      Matcher: 
         HttpCode: 200
      Name: !Sub "${Project}target-group2"
      Port: 8080
      Protocol: HTTP
      TargetGroupAttributes:
        - Key: "stickiness.enabled"
          Value: true
      TargetType: ip
      UnhealthyThresholdCount: 3
      VpcId: {'Fn::ImportValue': !Sub "${Project}vpc"}

  ALBListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    DependsOn: 
      - ALB
      - TargetGroup
      - TargetGroup2
    Properties: 
      DefaultActions:
        -
          Order: 1
          TargetGroupArn: !Ref TargetGroup
          Type: forward
      LoadBalancerArn: !Ref ALB
      Port: 80
      Protocol: HTTP
  ALBListener2:
    Type: AWS::ElasticLoadBalancingV2::Listener
    DependsOn: 
      - ALB
      - TargetGroup
    Properties: 
      DefaultActions:
        -
          Order: 1
          TargetGroupArn: !Ref TargetGroup2
          Type: forward
      LoadBalancerArn: !Ref ALB
      Port: 8080
      Protocol: HTTP

Outputs:
  ALB:
    Value: !Ref ALB
    Export: { "Name" : !Sub "${Project}alb" }

  SecurityGroupAlb:
    Value: !Ref SecurityGroupALB
    Export: { "Name" : !Sub "${Project}sg-alb" }

  TargetGroup:
    Value: !Ref TargetGroup
    Export: { "Name" : !Sub "${Project}target-group" }

  TargetGroup2:
    Value: !Ref TargetGroup2
    Export: { "Name" : !Sub "${Project}target-group2" }
